Created function to render data from API. Added styling to renderPokemon()

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Footer -->
     <footer>
         <!-- Pokemon Data Section where the input value will be used to fetch data from the API. -->
-        <section id="pokemon-data-section">
+        <section id="pokemon-name-section">
             <form id="pokemon-data-form">
                 <input type="text" name="pokemon-name" id="pokemon-name" placeholder="Pokémon name ex: Ditto" required>
                 <button type="submit" id="btn-submit">Add Pokémon</button>
