Made a Clear Save Data HTML element for LocalStorage clearing and implemented an iteration in function deletePokemon to find the same data and delete it from LocalStorage.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <button type="submit" id="btn-load-submit">Load Pokémon</button>
             </form>
         </section>
+        <section id="clear-save-data">
+            <form id="clear-save-data-form">
+                <h2>Clear Save Data</h2>
+                <button type="submit" id="btn-clear-submit">Clear Save Data</button>
+            </form>
+        </section>
     </footer>
 </body>
 </html>
