Broke out the big render function to it's own .js file. reformatted fetch functions to one function. Assigned unique id for modal form. (Added some comments in .html)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <button type="submit" id="btn-new-submit">Add Pokémon</button>
             </form>
         </section>
+        <!-- Pokemon Load Section, Loads data from Local Storage. -->
         <section id="pokemon-load-section">
             <form id="pokemon-load-data-form">
                 <h2>Load Saved Pokémon</h2>
@@ -43,6 +44,7 @@
                 <button type="submit" id="btn-load-submit">Load Pokémon</button>
             </form>
         </section>
+        <!-- Local Storage Clear Save Data. -->
         <section id="clear-save-data">
             <form id="clear-save-data-form">
                 <h2>Clear Save Data</h2>
